--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -18,6 +18,7 @@
     android:layout_height="wrap_content"
     android:id="@+id/bottomop"
     android:text="option"
+    android:background="@drawable/button_style"
     ></Button>
 </RelativeLayout>
 
@@ -132,27 +133,36 @@
 
 
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/R5"
         android:layout_width="match_parent"
         android:layout_below="@id/R4"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         >
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/addfood"
         android:text="AddFood"
         android:layout_marginTop="30sp"
+        android:layout_weight="1"
+        android:layout_marginRight="30sp"
+        android:layout_marginLeft="30sp"
+        android:background="@drawable/button_style"
         ></Button>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/addworkout"
+        android:layout_weight="1"
         android:text="addworkout"
         android:layout_alignParentRight="true"
         android:layout_marginTop="30sp"
+        android:layout_marginRight="30sp"
+        android:layout_marginLeft="30sp"
+        android:background="@drawable/button_style"
         ></Button>
-    </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
