--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -8,6 +8,9 @@
     android:id="@+id/home_user"
     android:background="@drawable/bacckground_color"
     >
+
+
+
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,7 +19,7 @@
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/bottomop"
+    android:id="@+id/bottonop"
     android:text="option"
     android:background="@drawable/button_style"
     ></Button>
