--- a/app/src/main/res/layout/activity_register__user.xml
+++ b/app/src/main/res/layout/activity_register__user.xml
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
-            android:text="Username"
+            android:text="Email"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             ></TextView>
@@ -56,11 +56,13 @@
         >
         <EditText
             android:layout_width="match_parent"
-            android:id="@+id/e1"
+            android:id="@+id/email"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
+            android:hint="Sample@hotmail.com"
+            android:inputType="textEmailAddress"
             ></EditText>
 
 </LinearLayout>
@@ -92,13 +94,13 @@
         >
 
         <EditText
-            android:id="@+id/e2"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
-            android:inputType="numberPassword"
+            android:inputType="textPassword"
             ></EditText>
 
     </LinearLayout>
@@ -129,14 +131,14 @@
         android:layout_marginBottom="20sp"
         >
         <EditText
-            android:id="@+id/e3"
+            android:id="@+id/conpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/e2"
+            android:layout_below="@id/password"
             android:layout_weight="1"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
-            android:inputType="numberPassword"
+            android:inputType="textPassword"
             ></EditText>
 
 </LinearLayout>
