--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -37,7 +37,7 @@ android:gravity="center"
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="username"
+            android:text="Email"
             android:layout_marginLeft="30sp"
             android:layout_marginRight="30sp"
             >
@@ -50,6 +50,7 @@ android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
        <EditText
+           android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
@@ -81,6 +82,7 @@ android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30sp"
@@ -95,7 +97,7 @@ android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <Button
-        android:id="@+id/b1"
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_style"
