--- a/app/src/main/res/layout/activity_totalkcal__user.xml
+++ b/app/src/main/res/layout/activity_totalkcal__user.xml
@@ -90,7 +90,7 @@
      >
 
         <Button
-            android:onClick="start"
+            android:id="@+id/start"
             android:text="start"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
