--- a/app/src/main/res/drawable/button_login_style.xml
+++ b/app/src/main/res/drawable/button_login_style.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#1E90FF"></solid>
-    <corners android:radius="10dp"/>
+
+    <solid android:color="#1c871c"></solid>
+    <corners android:radius="15dp"/>
+
 </shape>
