--- a/app/src/main/res/layout/activity_connect_user.xml
+++ b/app/src/main/res/layout/activity_connect_user.xml
@@ -1,73 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".connect_user"
-    android:gravity="center"
     android:background="@drawable/bacckground_color">
 
-    <LinearLayout
-        android:id="@+id/L1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="30sp"
-        android:gravity="center"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/H1"
-            android:text="Logo"
-            android:textSize="50sp"
-
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/L2"
-        android:layout_below="@id/L1"
-        android:layout_marginBottom="30sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        >
 
     <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Register"
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="30sp"
-        android:background="@drawable/button_style"
-            android:id="@+id/b2"
-            ></Button>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/L3"
-        android:layout_below="@id/L2"
-        android:layout_marginBottom="30sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        >
-        <Button
-            android:id="@+id/b1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_style"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp"
-            android:layout_below="@id/H1"
-            android:text="Login"
-            ></Button>
-
-    </LinearLayout>
-
-</RelativeLayout>
+        android:id="@+id/button3"
+        android:layout_width="246dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="132dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.49" />
+</androidx.constraintlayout.widget.ConstraintLayout>
