--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -1,111 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login_user"
-android:gravity="center"
     android:background="@drawable/bacckground_color"
-    >
+    android:id="@+id/r1"
+    tools:context=".Login_user">
 
-    <LinearLayout
-        android:id="@+id/L1"
-        android:layout_width="match_parent"
+
+        <!-- <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="30sp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:text="Email"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"></TextView>-->
+
+    <TextView
+        android:id="@+id/H1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
-        >
+        android:text="Logo"
+        android:textColor="#FFFFFF"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.529" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/H1"
-            android:text="Logo"
-            android:layout_marginBottom="30sp"
-            android:textSize="50sp"
-
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/L2"
-        android:layout_below="@id/L1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Email"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp"
-            >
-        </TextView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/L3"
-        android:layout_below="@id/L2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-       <EditText
-           android:id="@+id/email"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginBottom="30sp"
-           android:layout_marginLeft="30sp"
-           android:layout_marginRight="30sp"
-           >
-       </EditText>
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/L4"
-        android:layout_below="@id/L3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="password"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp"
-            />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/L5"
-        android:layout_below="@id/L4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/password"
+    <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp"
-            >
-        </EditText>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/L6"
-        android:layout_below="@id/L5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="48dp"
+            android:hint="Email"
+            app:layout_constraintBottom_toTopOf="@+id/password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"></EditText>
+
+    <Button
+        android:id="@+id/register"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/H1"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/button_register_style"
+        android:text="register"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"></Button>
+
     <Button
         android:id="@+id/login"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_style"
-        android:layout_marginBottom="30sp"
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="30sp"
         android:layout_below="@id/H1"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/button_login_style"
         android:text="Login"
-        ></Button>
-    </LinearLayout>
-</RelativeLayout>
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"></Button>
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="64dp"
+        android:hint="Password"
+        app:layout_constraintBottom_toTopOf="@+id/login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"></EditText>
+
+    <!--<TextView
+    android:id="@+id/textView2"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="30dp"
+    android:layout_marginEnd="30dp"
+    android:text="password"
+    android:textColor="#FFFFFF"
+    app:layout_constraintBottom_toTopOf="@+id/password"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
