--- a/app/src/main/res/layout/activity_home__user.xml
+++ b/app/src/main/res/layout/activity_home__user.xml
@@ -168,4 +168,24 @@
         android:background="@drawable/button_style"
         ></Button>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/R6"
+        android:layout_width="match_parent"
+        android:layout_below="@id/R5"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/signout"
+        android:layout_weight="1"
+        android:text="signout"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="30sp"
+        android:layout_marginRight="30sp"
+        android:layout_marginLeft="30sp"
+        android:background="@drawable/button_style"
+        ></Button>
+    </LinearLayout>
 </RelativeLayout>
