--- a/app/src/main/res/layout/activity_setting_user.xml
+++ b/app/src/main/res/layout/activity_setting_user.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".setting_user">
+    tools:context=".setting_user"
+    >
 
     <include
         android:id="@+id/app_bar"
@@ -13,5 +14,12 @@
         android:layout_height="wrap_content"
         ></include>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="409dp"
+        android:layout_height="765dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
