--- a/app/src/main/res/layout/activity_setting_user.xml
+++ b/app/src/main/res/layout/activity_setting_user.xml
@@ -15,11 +15,15 @@
         ></include>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
-        android:layout_height="765dp"
+        android:id="@+id/my_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
