--- a/app/src/main/res/layout/activity_edit_information.xml
+++ b/app/src/main/res/layout/activity_edit_information.xml
@@ -186,7 +186,7 @@ android:checked="false"
     </LinearLayout>
 
     <Button
-        android:id="@+id/registerbutton"
+        android:id="@+id/editbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/layoutlevelworkout"
