--- a/app/src/main/res/layout/activity_selectlistfood_user.xml
+++ b/app/src/main/res/layout/activity_selectlistfood_user.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".selectlistfood_user">
+
     <include
         android:id="@+id/searchView"
         layout="@layout/barselect"
@@ -19,54 +20,53 @@
         android:id="@+id/Searching"
         android:layout_width="211dp"
         android:layout_height="41dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
         android:ems="10"
         android:hint="Searching"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/mRecycleVeiew"
+        app:layout_constraintEnd_toStartOf="@+id/sreachtext"
+        app:layout_constraintHorizontal_bias="0.66"
         app:layout_constraintStart_toStartOf="@+id/searchView"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.48000002" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mRecycleVeiew"
         app_mt_speechMode="true"
-        android:layout_width="415dp"
-        android:layout_height="578dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="120dp"
         android:scrollbars="vertical"
         android:windowSoftInputMode="adjustPan|adjustResize"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Searching" />
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        app:layout_constraintVertical_bias="0.51" />
 
     <Button
         android:id="@+id/sreachtext"
-        android:layout_width="83dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="79dp"
+        android:layout_height="39dp"
         android:text="sreach"
-        app:layout_constraintBottom_toTopOf="@+id/mRecycleVeiew"
+        app:layout_constraintBottom_toBottomOf="@+id/Searching"
         app:layout_constraintEnd_toStartOf="@+id/camera"
         app:layout_constraintStart_toEndOf="@+id/Searching"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toTopOf="@+id/Searching"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/camera"
-        android:layout_width="79dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="74dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="8dp"
         android:text="CM"
-        app:layout_constraintBottom_toTopOf="@+id/mRecycleVeiew"
+        app:layout_constraintBottom_toBottomOf="@+id/Searching"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintStart_toEndOf="@+id/sreachtext"
+        app:layout_constraintTop_toTopOf="@+id/sreachtext"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
