--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -6,8 +6,19 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlHighlight">@color/red</item>
     </style>
 
     <style name="AppTheme.NoActionbar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
+
+
+
+    <style name="FlatButton" parent="Theme.AppCompat.Light">
+        <item name="colorButtonNormal">@color/red</item>
+        <item name="android:textColor">@color/myPeach</item>
+        <item name="colorControlHighlight">@color/myPeach</item>
+
+    </style>
+
 
 </resources>
