--- a/app/src/main/res/drawable/bacckground_color.xml
+++ b/app/src/main/res/drawable/bacckground_color.xml
@@ -5,8 +5,8 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#cc005c"
-        android:endColor="#cc003d"
+        android:startColor="#9b4cb9"
+        android:endColor="#4b0a87"
         android:type="linear">
     </gradient>
 </shape>
