--- a/app/src/main/res/layout/activity_register__user.xml
+++ b/app/src/main/res/layout/activity_register__user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Register_User"
-    android:background="@drawable/bacckground_color">
+    android:background="#262626">
 
     <LinearLayout
         android:id="@+id/L0"
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:id="@+id/H1"
+            android:textColor="#ffffff"
             android:textSize="30dp"
             android:text="Register"
             android:layout_marginRight="30sp"
@@ -33,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginBottom="10sp"
         >
 
         <TextView
@@ -41,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
             android:text="Email"
+            android:textColor="#ffffff"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             ></TextView>
@@ -58,7 +61,10 @@
             android:layout_width="match_parent"
             android:id="@+id/email"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:textColorHint="#F6F6F6"
+            android:layout_height="40sp"
+            android:textColor="#ffffff"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             android:hint="Sample@hotmail.com"
@@ -72,12 +78,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginBottom="10sp"
         >
         <TextView
             android:id="@+id/text2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2.5"
+            android:textColor="#ffffff"
             android:text="Password"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
@@ -96,8 +104,11 @@
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40sp"
             android:layout_weight="1"
+            android:paddingLeft="15dp"
+            android:textColor="#ffffff"
+            android:textColorHint="#F6F6F6"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             android:inputType="textPassword"
@@ -111,12 +122,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginBottom="10sp"
         >
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="ConfrimPassword"
     android:layout_weight="2.5"
+    android:textColor="#ffffff"
     android:layout_marginRight="30sp"
     android:layout_marginLeft="30sp"
     ></TextView>
@@ -133,9 +146,10 @@
         <EditText
             android:id="@+id/conpassword"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40sp"
             android:layout_below="@id/password"
             android:layout_weight="1"
+            android:textColor="#ffffff"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             android:inputType="textPassword"
@@ -153,11 +167,12 @@
         >
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="250sp"
             android:text="Next"
             android:layout_height="wrap_content"
             android:id="@+id/button1"
-            android:background="@drawable/button_style"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_login_style"
             android:layout_marginRight="30sp"
             android:layout_marginLeft="30sp"
             ></Button>
